# Z-Calculator.Derivative

./: .gitignore  CMakeLists.txt  Console.c  Console.h  Headers Lib.h  LICENSE  Parser.c  Parser.h  Printer.c  Printer.h  README.md
doc/: _Derivative.tex
include/: _node.h  _node_type.h  _trans.h  _tree.h  _variable.h  include.cmake
model/: _Derivative.c  _Derivative.h
src/: Console.c  Console.h  Headers_Lib.h  Parser.c  Parser.h  Printer.c  Printer.h  src.cmake
src/model/: _Derivative.c  _Derivative.h
src/utils/: node.c  node.h  node_type.c  node_type.h  trans.c  trans.h  variable.c  variable.h
utils/: node.c  node.h  node_type.c  node_type.h  trans.c  trans.h  variable.c  variable.h
